Warn on invalid surface_id at qxl_spice_destroy_surface_wait()

Fixes:
https://gitlab.freedesktop.org/spice/spice/-/issues/83

Signed-off-by: Marc-André Lureau <marcandre.lureau@redhat.com>
Acked-by: Frediano Ziglio <freddy77@gmail.com>